--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <div class="nav-bar-top">
                 <div class="logo-wrapper">
-                    <a id="logo-button" href="/index.html">
+                    <a id="logo-button" href="./index.html">
                         <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 211.83 176.64">
                             <g id="logo-2" data-name="Layer 2">
                                 <g id="Layer_1-2" data-name="Layer 1">
