--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <html>
     <header>
-        <link rel="icon" href="./favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
         <link rel="stylesheet" type="text/css" href="main.css">
         <script src="main.js" defer></script>
 
         <title>Matthew Chen</title>
+
+        <meta charset="UTF-8">
+        <meta name="author" content="Matthew Chen">
+        <meta property="og:image" content="./images/preview.jpg" />
+        <meta name="keywords" content="Matthew Chen, Portfolio, Software Engineer, SWE, Web Developer,
+        Designer">
+        <meta name="description" content="Free Web tutorials">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </header>
 
     <body>
