--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <header>
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="https://allbymatty.github.io/matthewchen/favicon.ico">
 
         <link rel="stylesheet" type="text/css" href="main.css">
         <script src="main.js" defer></script>
@@ -11,8 +11,9 @@
         <meta name="author" content="Matthew Chen">
         <meta property="og:image" content="./images/preview.jpg" />
         <meta name="keywords" content="Matthew Chen, Portfolio, Software Engineer, SWE, Web Developer,
-        Designer">
-        <meta name="description" content="Free Web tutorials">
+        Designer, UCLA, Los Angeles">
+        <meta name="description" content="I'm a computer science student at UCLA. I'm a web developer, designer, music producer, 
+        writer, photographer, and the list goes on.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </header>
 
