--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="main.css">
         <script src="main.js" defer></script>
 
-        <title>Matthew Chen test</title>
+        <title>Matthew Chen</title>
 
         <meta charset="UTF-8">
         <meta name="author" content="Matthew Chen">
