--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <header>
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+        <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/matthewchen/favicon.ico">
 
         <link rel="stylesheet" type="text/css" href="main.css">
         <script src="main.js" defer></script>
@@ -9,7 +9,7 @@
 
         <meta charset="UTF-8">
         <meta name="author" content="Matthew Chen">
-        <meta property="og:image" content="./images/preview.jpg" />
+        <meta property="og:image" content="https://allbymatty.github.io/matthewchen/images/preview.jpg" />
         <meta name="keywords" content="Matthew Chen, Portfolio, Software Engineer, SWE, Web Developer,
         Designer, UCLA, Los Angeles">
         <meta name="description" content="I'm a computer science student at UCLA. I'm a web developer, designer, music producer, 
