--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <header>
-        <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/matthewchen/favicon.ico">
+        <link rel="shortcut icon" type="image/png" href="https://allbymatty.github.io/matthewchen/images/favicon.ico">
 
         <link rel="stylesheet" type="text/css" href="main.css">
         <script src="main.js" defer></script>
@@ -9,10 +9,10 @@
 
         <meta charset="UTF-8">
         <meta name="author" content="Matthew Chen">
-        <meta property="og:image" content="https://allbymatty.github.io/matthewchen/images/preview.jpg" />
+        <meta name="image" property="og:image" content="https://allbymatty.github.io/matthewchen/images/preview.jpg" />
         <meta name="keywords" content="Matthew Chen, Portfolio, Software Engineer, SWE, Web Developer,
         Designer, UCLA, Los Angeles">
-        <meta name="description" content="I'm a computer science student at UCLA. I'm a web developer, designer, music producer, 
+        <meta name="description" property="og:description" content="I'm a computer science student at UCLA. I'm a web developer, designer, music producer, 
         writer, photographer, and the list goes on.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </header>
