--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                         <a href = "https://github.com/allbymatty?tab=repositories" target = "_blank">
                             <h3 id="github" class="socials-title">github</h3>
                         </a>
+                        <a href = "https://drive.google.com/file/d/1GK3PXnNQYRFqEu3AMNBfbmxF6wfi5XAK/view" target = "_blank">
+                            <h3 id="resume" class="socials-title">resume</h3>
+                        </a>
                         <a href = "https://medium.com/@matthewchen_60670" target = "_blank">
                             <h3 id="medium" class="socials-title">medium</h3>
                         </a>
@@ -181,6 +184,9 @@
                 </a>
                 <a href = "https://www.facebook.com/matthew.chen.589" target = "_blank">
                     <h3 id="facebook" class="socials-title">facebook</h3>
+                </a>
+                <a href = "https://drive.google.com/file/d/1GK3PXnNQYRFqEu3AMNBfbmxF6wfi5XAK/view" target = "_blank">
+                    <h3 id="resume" class="socials-title">resume</h3>
                 </a>
                 
                 <!--<ul class="tab-list-socials">
