fix header -> head and metatags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <header>
+    <head>
         <link rel="icon" href="favicon.ico?">
 
         <link rel="stylesheet" type="text/css" href="main.css">
@@ -12,9 +12,9 @@
         <meta name="image" property="og:image" content="https://allbymatty.github.io/matthewchen/images/preview.jpg">
         <meta name="keywords" property="og:keywords" content="Matthew Chen, Portfolio, Software Engineer, SWE, Web Developer, Designer, UCLA, Los Angeles">
         <meta name="description" property="og:description" content="I'm a computer science student at UCLA. I'm a web developer, designer, music producer, 
-        writer, photographer, and the list goes on.">
+        writer, and photographer.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </header>
+    </head>
 
     <body>
         <div class="mobile-screen light">
