update github link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href = "https://www.linkedin.com/in/allaboutmatt/" target = "_blank">
                             <h3 id="linkedin" class="socials-title">linkedin</h3>
                         </a>
-                        <a href = "https://github.com/allbymatty?tab=repositories" target = "_blank">
+                        <a href = "https://github.com/matttychen?tab=repositories" target = "_blank">
                             <h3 id="github" class="socials-title">github</h3>
                         </a>
                         <a href = "https://drive.google.com/file/d/1izNwZYtFHdpEgznB07cgsqPG5jtVZzMU/view" target = "_blank">
@@ -168,7 +168,7 @@
                 <a href = "https://www.linkedin.com/in/allaboutmatt/" target = "_blank">
                     <h3 id="linkedin" class="socials-title">linkedin</h3>
                 </a>
-                <a href = "https://github.com/allbymatty?tab=repositories" target = "_blank">
+                <a href = "https://github.com/matttychen?tab=repositories" target = "_blank">
                     <h3 id="github" class="socials-title">github</h3>
                 </a>
                 <a href = "https://medium.com/@matthewchen_60670" target = "_blank">
