--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </head>
 
     <body>
+        <!-- MOBILE VIEW -->
         <div class="mobile-screen light">
             <div class = "quick-about-wrapper">
                 <div class="content-wrapper">
@@ -59,8 +60,11 @@
                 </div>
             </div>
         </div>
+        <!-- END MOBILE VIEW-->
 
+        <!-- REGULAR VIEW -->
         <div id="regular-screen" class="regular-screen light">
+            <!-- CURSOR -->
             <div class="cursor"></div>
             <div class="inner-cursor"></div>
             <div class="left-arrow-cursor">
@@ -94,11 +98,9 @@
                     </g>
                 </svg>
             </div>
+            <!-- END CURSOR -->
 
-            <div class="explore-tag-wrapper">
-                <h3 id="explore-tag">explore</h3>
-            </div>
-
+            <!-- TOP NAVIGATION -->
             <div class="nav-bar-top">
                 <div class="logo-wrapper">
                     <a id="logo-button" href="./index.html">
@@ -129,7 +131,9 @@
                     <h3 id="contact-tag">send me an email</h3>
                 </div>
             </div>
+            <!-- END TOP NAVIGATION -->
 
+            <!-- SCRIPT -->
             <div class="nav-bar-side">
                 <div id="about-me" class="description active">
                     <h3>
@@ -145,8 +149,7 @@
 
                 <div id="designer" class="description">
                     <h3>
-                        In my spare time, I enjoy designing and producing
-                        music.
+                        In my spare time, I enjoy bouldering and hanging out with my dog.
                     </h3>
                 </div>
 
@@ -163,7 +166,9 @@
                     </h3>
                 </div>
             </div>
+            <!-- END SCRIPT -->
 
+            <!-- SOCIALS -->
             <div class="nav-bar-socials">
                 <a href = "https://www.linkedin.com/in/allaboutmatt/" target = "_blank">
                     <h3 id="linkedin" class="socials-title">linkedin</h3>
@@ -181,8 +186,9 @@
                     <h3 id="resume" class="socials-title">resume</h3>
                 </a>
             </div>
-
+            <!-- END SOCIALS -->
     
+            <!-- MAIN GIF OVERLAY -->
             <section id="matt-page" class="matt-screen">
                 <div class="matt-gif">
                     <img id="gif" src="./images/landing-gif-centered.gif"/>
@@ -218,6 +224,7 @@
                     <h3 id="click-tag">click to see my work</h3>
                 </div>
             </section>
+            <!-- END MAIN GIF OVERLAY -->
 
             <section id="developer-page" class="developer-screen">
                 <div class="developer-content-wrapper"></div>
@@ -283,5 +290,6 @@
                 </div>
             </section>
         </div>
+        <!-- END REGULAR VIEW-->
     </body>
 </html>
